--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,8 +2,6 @@
   border: 1px solid #e2e2e2;
   color: rgba(135, 135, 135);
   padding: 16px;
-  margin: 30px auto;
-  max-width: 600px;
   border-radius: 4px;
 }
 
@@ -25,4 +23,29 @@
   font-weight: 100;
   line-height: 20px;
   list-style: none;
+}
+
+.Weather img {
+  position: relative;
+  top: -10px;
+  margin-right: 10px;
+  width: 64px;
+}
+
+.Weather .temperature {
+  color: black;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+.Weather .unit {
+  color: black;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 6px;
+  padding-left: 6px;
+  vertical-align: top;
 }
