--- a/src/Weather.css
+++ b/src/Weather.css
@@ -25,16 +25,17 @@
   list-style: none;
 }
 
-.Weather img {
+.Weather canvas {
   position: relative;
-  top: -10px;
+  top: 5px;
   margin-right: 10px;
-  width: 64px;
 }
 
 .Weather .temperature {
+  position: relative;
+  left: 45px;
   color: black;
-  font-size: 50px;
+  font-size: 55px;
   font-weight: 400;
   line-height: 1.3;
 }
@@ -46,6 +47,6 @@
   font-weight: 400;
   line-height: 24px;
   margin-top: 6px;
-  padding-left: 6px;
+  padding-left: 55px;
   vertical-align: top;
 }
